<resources>
    <string name="app_name">helloworld</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="calculate">Calculate</string>
    <string name="nvalue">N: %d</string>
    <string name="fvalue">F(n) = %d</string>
</resources>